--- a/src/App.scss
+++ b/src/App.scss
@@ -18,4 +18,9 @@ code {
     justify-content: space-between;
     align-items: center;
   }
+  .actions-btn {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
 }
