--- a/src/components/Home.scss
+++ b/src/components/Home.scss
@@ -7,19 +7,18 @@
   max-width: 80vw;
   margin: 20px auto;
 }
-
-.home-container h1 {
+h1 {
   font-size: 2.75rem;
   color: #2c3e50;
   margin-bottom: 24px;
 }
 
-.home-container .highlight {
+.highlight {
   color: #007bff;
   font-weight: bold;
 }
 
-.home-container p {
+p {
   font-size: 1.15rem;
   color: #555;
   line-height: 1.8;
